template/kubernetes/infrastructure/controllers/vpa/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpa-system
  labels:
    app.kubernetes.io/name: vpa
    app.kubernetes.io/managed-by: flux
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
